<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    android:orientation="vertical">

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "10dp"
        android:layout_marginRight = "10dp"
        android:text="@string/skip"
        android:background="@android:color/transparent"
        android:layout_gravity="right"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop = "90dp"
            app:layout_constraintBottom_toTopOf="@+id/startBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.viewpager2.widget.ViewPager2>

        <ImageButton
            android:id="@+id/startBtn"
            android:layout_width="249dp"
            android:layout_height="48dp"
            android:layout_marginLeft="81.7dp"
            android:layout_marginTop="435dp"
            android:layout_marginRight="81.7dp"
            android:layout_marginBottom="112.3dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/start_btn" />

        <LinearLayout
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startBtn">

            <Button
                android:id="@+id/previousBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:text="@string/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nextBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/dotsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/nextBtn" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>